Structure of programme is created. Pom.xml files are configured.

--- a/MODEL/pom.xml
+++ b/MODEL/pom.xml
@@ -5,14 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>hu.uni.miskolc.iit.igml.editor</groupId>
-    <artifactId>IndoorEdy</artifactId>
+    <artifactId>MODEL</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
 
-    <modules>
-        <module>MODEL</module>
-        <module>DAO</module>
-        <module>DAO-XML</module>
-    </modules>
-
+    
 </project>
