--- a/DAO-XML/pom.xml
+++ b/DAO-XML/pom.xml
@@ -7,6 +7,18 @@
     <groupId>hu.uni.miskolc.iit.igml.editor</groupId>
     <artifactId>DAO-XML</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
@@ -15,14 +27,20 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.jvnet.ogc/indoorgml -->
+<!--
+        <dependency>
+            <groupId>net.sf.dozer</groupId>
+            <artifactId>dozer</artifactId>
+            <version>5.4.0</version>
+        </dependency>
+-->
         <dependency>
             <groupId>org.jvnet.ogc</groupId>
-            <artifactId>indoorgml</artifactId>
-            <version>2.6.1</version>
-            <type>pom</type>
+            <artifactId>indoorgml-v_1_0</artifactId>
+            <version>LATEST</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/indoorgml-v_1_0-2.6.2-SNAPSHOT.jar</systemPath>
         </dependency>
-
     </dependencies>
     
 </project>
