--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
     <groupId>hu.uni.miskolc.iit.igml.editor</groupId>
     <artifactId>IndoorEdy</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <packaging>pom</packaging>
 
     <modules>
@@ -15,4 +27,14 @@
         <module>DAO-XML</module>
     </modules>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.jvnet.ogc/indoorgml-v_1_0 -->
+        <dependency>
+            <groupId>org.jvnet.ogc</groupId>
+            <artifactId>indoorgml-v_1_0</artifactId>
+            <version>${ogc-schemas.version}</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/indoorgml-v_1_0-2.6.2-SNAPSHOT.jar</systemPath>
+        </dependency>
+    </dependencies>
 </project>
