--- a/DAO-XML/pom.xml
+++ b/DAO-XML/pom.xml
@@ -27,6 +27,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>hu.uni.miskolc.iit.igml.editor</groupId>
+            <artifactId>DAO-XML</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>net.sf.dozer</groupId>
