--- a/MODEL/pom.xml
+++ b/MODEL/pom.xml
@@ -7,5 +7,13 @@
     <groupId>hu.uni.miskolc.iit.igml.editor</groupId>
     <artifactId>MODEL</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.jvnet.ogc</groupId>
+            <artifactId>indoorgml-v_1_0</artifactId>
+            <version>2.6.1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
